--- a/ComicDownloader/packages.config
+++ b/ComicDownloader/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr4.StringTemplate" version="4.0.6.9004" targetFramework="net452" />
+  <package id="FluentCommandLineParser" version="1.4.3" targetFramework="net452" />
   <package id="iTextSharp" version="5.5.8" targetFramework="net452" />
   <package id="itextsharp.xmlworker" version="5.5.8" targetFramework="net452" />
   <package id="morelinq" version="1.4.0" targetFramework="net452" />
