--- a/ComicWebApp/bower.json
+++ b/ComicWebApp/bower.json
@@ -5,6 +5,8 @@
     "bootstrap": "3.3.6",
     "jquery": "2.2.1",
     "jquery-ui": "1.11.4",
-    "jcarousel": "0.3.4"
+    "jcarousel": "0.3.4",
+    "nanoscroller": "*"
+
   }
 }
