--- a/ComicWebApp/package.json
+++ b/ComicWebApp/package.json
@@ -16,7 +16,8 @@
     "gulp-sass": "^2.2.0",
     "bower": "1.7.7",
     "typings": "^0.6.8",
-    "typescript": "^1.8.2"
+    "typescript": "^1.8.2",
+    "DefinitelyTyped": "https://github.com/DefinitelyTyped/DefinitelyTyped.git"
   },
   "scripts": { "postinstall": "typings install" }
 }
