--- a/DotNetEpub-master/EPUBTest/EPUBTest.csproj
+++ b/DotNetEpub-master/EPUBTest/EPUBTest.csproj
@@ -84,9 +84,9 @@
     <None Include="svgSample.svg" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\dotNetEpub\DotNetEpub.csproj">
+    <ProjectReference Include="..\dotNetEpub\dotNetEpub.csproj">
       <Project>{382299DE-6C02-4587-864F-2218BD3A1935}</Project>
-      <Name>DotNetEpub</Name>
+      <Name>dotNetEpub</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
