Inittial home page/story page/reader page

--- a/ComicWebApp/bower.json
+++ b/ComicWebApp/bower.json
@@ -6,7 +6,8 @@
     "jquery": "2.2.1",
     "jquery-ui": "1.11.4",
     "jcarousel": "0.3.4",
-    "nanoscroller": "*"
+    "nanoscroller": "0.8.7"
+
 
   }
 }
