--- a/ComicWebApp/package.json
+++ b/ComicWebApp/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "angular2": "2.0.0-beta.8",
-    "systemjs": "0.19.6",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
+    //"ng2-bootstrap": "^1.0.6",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
+    "systemjs": "0.19.6",
     "zone.js": "0.6.2"
   },
   "devDependencies": {
@@ -18,5 +19,7 @@
     "typings": "^0.6.8",
     "typescript": "^1.8.2"
   },
-  "scripts": { "postinstall": "typings install" }
+  "scripts": {
+    "postinstall": "typings install"
+  }
 }
