--- a/ComicWebApp/package.json
+++ b/ComicWebApp/package.json
@@ -6,18 +6,25 @@
     "angular2": "2.0.0-beta.8",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
-    //"ng2-bootstrap": "^1.0.6",
+    "ng2-bootstrap": "^1.0.6",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "systemjs": "0.19.6",
     "zone.js": "0.6.2"
   },
   "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-sass": "^2.2.0",
     "bower": "1.7.7",
+    "gulp": "^3.9.0",
+    "gulp-load-plugins": "^1.2.0",
+    "gulp-sass": "^2.2.0",
+    "typescript": "^1.8.2",
     "typings": "^0.6.8",
-    "typescript": "^1.8.2"
+    "gulp-typescript": "2.12.1",
+    "gulp-sequence": "0.4.5",
+    "gulp-rename": "1.2.2",
+    "gulp-replace-name": "1.0.1",
+    "gulp-watch": "4.3.5"
+
   },
   "scripts": {
     "postinstall": "typings install"
