--- a/ComicWeb.JsonService/project.json
+++ b/ComicWeb.JsonService/project.json
@@ -8,7 +8,7 @@
   "frameworks": {
     "net451": {
       "dependencies": {
-        "Newtonsoft.Json": "8.0.2",
+        "Newtonsoft.Json": "8.0.2"
       }
     },
     "dotnet5.4": {
@@ -21,7 +21,7 @@
         "Newtonsoft.Json": "8.0.2",
         "System.IO": "4.0.0-beta-23019",
         "System.IO.FileSystem": "4.0.1-beta-23516",
-        "System.Threading.Tasks.Parallel": "4.0.1-beta-23516",
+        "System.Threading.Tasks.Parallel": "4.0.1-beta-23516"
       }
     }
   },
