--- a/ComicWebApp/package.json
+++ b/ComicWebApp/package.json
@@ -24,7 +24,16 @@
     "gulp-rename": "1.2.2",
     "gulp-replace-name": "1.0.1",
     "gulp-watch": "4.3.5",
-    "gulp-livereload": "3.8.1"
+    "gulp-livereload": "3.8.1",
+    "gulp-uglify": "^1.5.3",
+    "gulp-concat": "^2.6.0",
+    "gulp-jshint": "^2.0.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-clean-css": "^2.0.3",
+    "gulp-csso": "^1.1.0",
+    "gulp-size": "^2.1.0",
+    "gulp-concat-css": "^2.2.0"
+
   },
   "scripts": {
     "postinstall": "typings install"
