--- a/ComicWebApp/project.json
+++ b/ComicWebApp/project.json
@@ -8,8 +8,8 @@
     "Microsoft.AspNet.IISPlatformHandler": "1.0.0-rc1-final",
     "Microsoft.AspNet.Server.Kestrel": "1.0.0-rc1-final",
     "Microsoft.AspNet.Server.IIS": "1.0.0-*",
-    "Microsoft.AspNet.Server.WebListener": "1.0.0-*",
-    "Microsoft.AspNet.StaticFiles": "1.0.0-*",
+    "Microsoft.AspNet.Server.WebListener": "1.0.0-rc1-final",
+    "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final",
     "ComicWeb.Core": "1.0.0-*",
     "ComicWeb.JsonService": "1.0.0-*",
     "Microsoft.AspNet.Mvc": "6.0.0-rc1-final"
