--- a/ComicWebApp/project.json
+++ b/ComicWebApp/project.json
@@ -12,7 +12,11 @@
     "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final",
     "ComicWeb.Core": "1.0.0-*",
     "ComicWeb.JsonService": "1.0.0-*",
-    "Microsoft.AspNet.Mvc": "6.0.0-rc1-final"
+    "Microsoft.AspNet.Mvc": "6.0.0-rc1-final",
+    "System.IdentityModel.Tokens": "5.0.0-rc1-211161024",
+    "System.IdentityModel.Tokens.Jwt": "5.0.0-rc1-211161024",
+    "Microsoft.AspNet.Authentication.JwtBearer": "1.0.0-rc1-final",
+    "Microsoft.AspNet.Diagnostics": "1.0.0-rc1-final"
   },
 
   "commands": {
@@ -21,7 +25,11 @@
 
   "frameworks": {
     "dnx451": { },
-    "dnxcore50": { }
+    "dnxcore50": {
+      "dependencies": {
+        "System.Security.Cryptography.Csp" : "4.0.0-beta-23516"
+      }
+    }
   },
 
   "exclude": [
