--- a/ComicWebApp/package.json
+++ b/ComicWebApp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "angular2": "2.0.0-beta.8",
+    "angular2-localstorage": "^0.2.0",
     "body-parser": "^1.15.0",
     "es6-promise": "3.1.2",
     "es6-shim": "0.35.0",
@@ -13,7 +14,9 @@
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "systemjs": "0.19.6",
-    "zone.js": "0.6.2"
+    "zone.js": "0.6.2",
+    "ng2-cookies": "0.1.4"
+
   },
   "devDependencies": {
     "bower": "1.7.7",
