--- a/.gitignore
+++ b/.gitignore
@@ -28,9 +28,9 @@ bld/
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
-wwwroot/app
-wwwroot/view
-wwwroot/libs
+*wwwroot/app/
+*wwwroot/views/
+*wwwroot/libs/
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
