--- a/ComicWebApp/package.json
+++ b/ComicWebApp/package.json
@@ -15,7 +15,8 @@
     "rxjs": "5.0.0-beta.2",
     "systemjs": "0.19.6",
     "zone.js": "0.6.2",
-    "ng2-cookies": "0.1.4"
+    "ng2-cookies": "0.1.4",
+    "angular2-jwt": "0.1.8"
 
   },
   "devDependencies": {
