--- a/ComicWebApp/bower.json
+++ b/ComicWebApp/bower.json
@@ -7,6 +7,7 @@
     "jquery-ui": "1.11.4",
     "jcarousel": "0.3.4",
     "nanoscroller": "0.8.7",
-    "bxslider-4": "^4.2.5"
+    "bxslider-4": "^4.2.5",
+    "tooltipster": "^3.3.0"
   }
 }
