--- a/ComicWebApp/package.json
+++ b/ComicWebApp/package.json
@@ -37,11 +37,14 @@
     "gulp-jshint": "^2.0.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-clean-css": "^2.0.3",
+    "gulp-flatten": "^0.2.0",
     "gulp-csso": "^1.1.0",
     "gulp-size": "^2.1.0",
+    "gulp-tslint": "^4.3.3",
     "gulp-concat-css": "^2.2.0",
     "mocha": "^2.2.4",
-    "should": "^6.0.1"
+    "should": "^6.0.1",
+    "gulp-main-bower-files": "^1.3.1"
   },
   "scripts": {
     "postinstall": "typings install",
