--- a/ComicWebApp/bower.json
+++ b/ComicWebApp/bower.json
@@ -8,6 +8,7 @@
     "jcarousel": "0.3.4",
     "nanoscroller": "0.8.7",
     "bxslider-4": "^4.2.5",
-    "tooltipster": "^3.3.0"
+    "tooltipster": "^3.3.0",
+    "font-awesome": "4.5.0"
   }
 }
