--- a/ComicWeb.JsonService/project.json
+++ b/ComicWeb.JsonService/project.json
@@ -19,7 +19,8 @@
         "System.Threading": "4.0.11-beta-23516",
         "System.IO": "4.0.0-beta-23019",
         "System.IO.FileSystem": "4.0.1-beta-23516",
-        "System.Threading.Tasks.Parallel": "4.0.1-beta-23516"
+        "System.Threading.Tasks.Parallel": "4.0.1-beta-23516",
+        "System.Globalization": "4.0.11-beta-23516"
       }
     }
   },
