--- a/ConsoleApplication1/packages.config
+++ b/ConsoleApplication1/packages.config
@@ -4,4 +4,5 @@
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net452" />
   <package id="iTextSharp" version="5.5.8" targetFramework="net452" />
   <package id="itextsharp.xmlworker" version="5.5.8" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
 </packages>
